--- a/NetworkManagerAppModern/NetworkManagerAppModern.csproj
+++ b/NetworkManagerAppModern/NetworkManagerAppModern.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
@@ -13,6 +13,9 @@
   <!-- For Properties/Resources.resx, it's handled differently (usually via VS UI) -->
   <ItemGroup>
     <Content Include="appicon.ico" Condition="Exists('appicon.ico')" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Management" Version="9.0.6" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
