Fixed Connect/Disconnect logic

--- a/NetworkManagerAppModern/NetworkManagerAppModern.csproj
+++ b/NetworkManagerAppModern/NetworkManagerAppModern.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="ProfileSelectionDialog.cs" />
+    <!--<Compile Include="ProfileSelectionDialog.cs" />-->
   </ItemGroup>
 
 </Project>
